fix add selfie to cloud not to s3
